test/cases/compile_errors/async/runtime-known_function_called_with_async_keyword.zig
export fn entry() void {
    var ptr = afunc;
    _ = async ptr();
    _ = &ptr;
}

fn afunc() callconv(.Async) void {}

// error
// backend=stage1
// target=native
//
// tmp.zig:3:15: error: function is not comptime-known; @asyncCall required
